--- a/client/int-blog/styles/login-st.module.css
+++ b/client/int-blog/styles/login-st.module.css
@@ -7,6 +7,22 @@
   padding: 8em;
   height: "100%";
   width: "100%";
+
+  
+}
+@media only screen and (max-width:600px) {
+  .blob {
+    background-image: url("/blob2.svg");
+    background-repeat: no-repeat;
+    background-size: 50%;
+    /* background-position-y: bottom; */
+    background-position: 150% 100%;
+    padding: 1em;
+    height: "100%";
+    width: "100%";
+  
+    
+  }
 }
 
 .link:hover {
