added hamburguer menu

--- a/client/int-blog/styles/register-st.module.css
+++ b/client/int-blog/styles/register-st.module.css
@@ -4,12 +4,12 @@
   background-size: 50%;
   /* background-position-y: bottom; */
   background-position: 150% 100%;
-  padding: 7em;
+  padding: 3em;
   height: "100%";
   width: "100%";
 }
 
-@media only screen and (max-width:600px) {
+@media only screen and (max-width: 600px) {
   .blob {
     background-image: url("/blob2.svg");
     background-repeat: no-repeat;
@@ -19,7 +19,9 @@
     padding: 1em;
     height: "100%";
     width: "100%";
-  
-    
   }
+}
+
+.btn:hover {
+  text-decoration: none;
 }
