--- a/client/int-blog/styles/register-st.module.css
+++ b/client/int-blog/styles/register-st.module.css
@@ -5,8 +5,8 @@
   /* background-position-y: bottom; */
   background-position: 150% 100%;
   padding: 3em;
-  height: 100vh;
-  width: 100vw;
+  height: "100%";
+  width: "100%";
 }
 
 @media only screen and (max-width: 600px) {
