:wrench: added styles to otp section

--- a/client/int-blog/styles/login-st.module.css
+++ b/client/int-blog/styles/login-st.module.css
@@ -5,8 +5,8 @@
   /* background-position-y: bottom; */
   background-position: 150% 100%;
   padding: 4em;
-  height: "100%";
-  width: "100%";
+  height: 80vh;
+  width: 100vw;
 
   
 }
